--- a/physics/coherism.tex
+++ b/physics/coherism.tex
@@ -73,7 +73,7 @@ We propose a variational framework that couples quantum information and spacetim
 \end{equation*}
 while variation with respect to $\rho$ yields a geometry-dependent open-system evolution
 $\dot{\rho} = -i[H,\rho] + \mathcal{L}_g[\rho]$.
-We show that this framework reproduces the semiclassical Einstein equation and the Einstein--Langevin form of stochastic gravity in appropriate limits. As a concrete prediction, we derive a small, coherence-dependent violation of the Weak Equivalence Principle for macroscopic quantum superpositions, which may be testable with next-generation atom interferometry. The resulting picture treats gravity and quantum mechanics as complementary limits of a deeper feedback law governing the alignment of quantum information with spacetime geometry.
+We demonstrate in toy models that this framework reproduces the semiclassical Einstein equation and the Einstein--Langevin form of stochastic gravity in appropriate limits. As a worked example, we exhibit a small, coherence-dependent violation of the Weak Equivalence Principle for macroscopic quantum superpositions, which may be testable with next-generation atom interferometry. The framework is presented as an effective field theory proposal; its value will ultimately depend on whether it yields concrete, testable predictions. The resulting picture treats gravity and quantum mechanics as complementary limits of a deeper feedback law governing the alignment of quantum information with spacetime geometry.
 \end{abstract}
 
 \maketitle
@@ -664,7 +664,7 @@ to first order in $\kappa\,\Xi^{\mathrm{coh}}_{00}/E_0$.
 Thus, in this toy model, the coherent system B falls with a slightly different acceleration than the incoherent system A, even though their standard stress--energy tensors are identical.
 In the limit $\kappa\to 0$ or $\Xi^{\mathrm{coh}}_{00}\to 0$, we recover $m_g^{(A)}=m_g^{(B)}$ and the WEP is restored.
 
-\emph{Prediction:} A Bose-Einstein condensate of $10^6$ $^{87}\mathrm{Rb}$ atoms in a coherent superposition will fall slightly faster than a thermal cloud of equal mass, with a fractional acceleration difference of approximately $\Delta a/a \sim 10^{-15}$.
+\emph{Order-of-magnitude estimate:} For a Bose-Einstein condensate of $10^6$ $^{87}\mathrm{Rb}$ atoms in a coherent superposition compared to a thermal cloud of equal mass, the fractional acceleration difference could be of order $\Delta a/a \sim 10^{-15}$, subject to the undetermined coupling $\kappa$.
 
 % ----------------------------------------------------------------------
 \subsection{Interpretation and experimental prospects}
@@ -816,7 +816,7 @@ We do not attempt to formalize this idea here, but it shapes the broader researc
 
 We have introduced a variational feedback framework linking quantum information and spacetime geometry.
 The central object is a coherence functional $\Cfunc[g,\rho;\mu]$ whose variation yields both an informational stress tensor $\Tmn$ that modifies Einstein's equation and a geometry-dependent open-system evolution for $\rho$.
-Using a 1+1D toy model, we showed that standard semiclassical and anomaly-induced results are recovered in appropriate limits, and we derived a simple scaling law for coherence-dependent violations of the Weak Equivalence Principle.
+Using a 1+1D toy model, we showed that standard semiclassical and anomaly-induced results are recovered in appropriate limits, and we illustrated a simple scaling law for coherence-dependent violations of the Weak Equivalence Principle.
 We also suggested that coherence may modify semiclassical tunneling rates, a hypothesis that warrants careful scrutiny in fusion experiments.
 We sketched how entropic corrections may appear in cosmology and black-hole physics~\cite{Verlinde2011,Padmanabhan2010}, and identified experimental directions where such effects could be probed.
 
