Major revision: add appendices, simulation, fix formatting
- Add Appendix J: Analog Gravity Predictions (BEC sonic horizons)
- Add Appendix K: Entropic κ Derivation (independent of AdS/CFT)
- Add Appendix L: Gaussian-in-Rindler Dynamical Solution
- Add Appendix M: Lindblad from Unruh-DeWitt Detector
- Add FRW numerical simulation (coherism_frw_simulation.py)
- Fix Rindler metric, bibliography entries, add Key Advances section
- Fix LaTeX formatting: split long equations to prevent overflow
- Update abstract/intro/conclusion to reference new appendices

--- a/physics/coherism_refs.bib
+++ b/physics/coherism_refs.bib
@@ -127,7 +127,7 @@
   url          = {https://doi.org/10.1103/PhysRevD.82.124019}
 }
 
-@article{Wall2012QNEC,
+@article{Wall2010QNEC,
   author       = {Aron C. Wall},
   title        = {Proving the Achronal Averaged Null Energy Condition from the Generalized Second Law},
   journal      = {Physical Review D},
@@ -259,15 +259,57 @@
   url = {https://arxiv.org/abs/0804.2182}
 }
 
+@article{Casini2011,
+  title = {Towards a derivation of holographic entanglement entropy},
+  author = {Casini, Horacio and Huerta, Marina and Myers, Robert C.},
+  journal = {Journal of High Energy Physics},
+  volume = {2011},
+  number = {5},
+  pages = {036},
+  year = {2011},
+  doi = {10.1007/JHEP05(2011)036},
+  eprint = {1102.0440},
+  archivePrefix = {arXiv},
+  primaryClass = {hep-th},
+  url = {https://doi.org/10.1007/JHEP05(2011)036}
+}
+
 @article{Faulkner2017,
   title = {Modular Hamiltonians for Deformed Half-Spaces and the Averaged Null Energy Condition},
   author = {Faulkner, Thomas and Leigh, Robert G. and Parrikar, Onkar and Wang, Houyi},
-  journal = {JHEP},
-  volume = {09},
+  journal = {Journal of High Energy Physics},
+  volume = {2017},
+  number = {9},
   pages = {038},
   year = {2017},
+  doi = {10.1007/JHEP09(2017)038},
   eprint = {1605.08072},
   archivePrefix = {arXiv},
   primaryClass = {hep-th},
-  url = {https://arxiv.org/abs/1605.08072}
+  url = {https://doi.org/10.1007/JHEP09(2017)038}
+}
+
+@article{Unruh1981,
+  author = {Unruh, W. G.},
+  title = {Experimental Black-Hole Evaporation?},
+  journal = {Physical Review Letters},
+  volume = {46},
+  number = {21},
+  pages = {1351--1353},
+  year = {1981},
+  doi = {10.1103/PhysRevLett.46.1351},
+  url = {https://doi.org/10.1103/PhysRevLett.46.1351}
+}
+
+@article{Barcelo2005,
+  author = {Barcel{\'o}, Carlos and Liberati, Stefano and Visser, Matt},
+  title = {Analogue Gravity},
+  journal = {Living Reviews in Relativity},
+  volume = {8},
+  pages = {12},
+  year = {2005},
+  doi = {10.12942/lrr-2005-12},
+  eprint = {gr-qc/0505065},
+  archivePrefix = {arXiv},
+  url = {https://doi.org/10.12942/lrr-2005-12}
 }
